--- a/autoexec-part2.cfg
+++ b/autoexec-part2.cfg
@@ -98,19 +98,19 @@ bind "1"              "+fin_knife; fin_nadexhoff;                       ; fin_ke
 bind "2"              "fin_nadexhoff;  slot3; slot2; slot1;  cl_decal_clear_world;         ; fin_keycontainer"; // This is the 2 key
 bind "3"              "fin_nadexhoff;  slot3; slot1; slot2;  cl_decal_clear_world;         ; fin_keycontainer"; // This is the 3 key
 bind "4"              "+fin_autoknifeinspect; fin_nadexhoff; cl_decal_clear_world;         ; fin_keycontainer"; // This is the 4 key
-bind "5"              "slot6; cl_decal_clear_world;                     ; fin_keycontainer";                    // This is the 5 key
+bind "5"              "fin_nadexhon;  slot6; cl_decal_clear_world;                     ; fin_keycontainer";                    // This is the 5 key
 bind "6"              "fin_nadexhoff; slot5;  cl_decal_clear_world;     ; fin_keycontainer";                    // This is the 6 key
-bind "7"              "slot6; cl_decal_clear_world;                     ; fin_keycontainer";                    // This is the 7 key
-bind "8"              "fin_nadexhoff; slot7;  cl_decal_clear_world;     ; fin_keycontainer";                    // This is the 8 key
-bind "9"              "fin_nadexhoff; slot8;  cl_decal_clear_world;     ; fin_keycontainer";                    // This is the 9 key
-bind "0"              "fin_nadexhoff; slot9;  cl_decal_clear_world;     ; fin_keycontainer";                    // This is the 0 key
+bind "7"              "fin_nadexhon;  slot6; cl_decal_clear_world;                     ; fin_keycontainer";                    // This is the 7 key
+bind "8"              "fin_nadexhon;  slot7;  cl_decal_clear_world;     ; fin_keycontainer";                    // This is the 8 key
+bind "9"              "fin_nadexhon;  slot8;  cl_decal_clear_world;     ; fin_keycontainer";                    // This is the 9 key
+bind "0"              "fin_nadexhon; slot9;  cl_decal_clear_world;     ; fin_keycontainer";                    // This is the 0 key
 bind "-"              "fin_nadexhoff; slot0;  cl_decal_clear_world;     ; fin_keycontainer";                    // This is the - key
 bind "="              "fin_nadexhoff; slot11; cl_decal_clear_world;     ; fin_keycontainer";                    // This is the = key
-bind "BACKSPACE"      "fin_nadexhoff; decoy;  cl_decal_clear_world;     ; fin_keycontainer";                    // This is the backspace key
+bind "BACKSPACE"      "fin_nadexhoff; slot12; cl_decal_clear_world;     ; fin_keycontainer";                    // This is the backspace key
 bind "INS"            "                                                 ; fin_keycontainer";                    // This is the insert key
 bind "PGUP"           "                                                 ; fin_keycontainer";                    // This is the page up key
 bind "NUMLOCKTOGGLE"  "                                                 ; fin_keycontainer";                    // This is the Num lock key
-bind "KP_DIVIDE"      "+fin_fpsbug                                      ; fin_keycontainer";                    // This is the Numpad / key
+bind "KP_DIVIDE"      "                                                 ; fin_keycontainer";                    // This is the Numpad / key
 bind "KP_MULTIPLY"    "exec ./practice.cfg;                             ; fin_keycontainer";                    // This is the Numpad * key
 bind "KP_MINUS"       "condump; exec ./autoexec.cfg;                    ; fin_keycontainer";                    // This is the Numpad - key
 
@@ -118,7 +118,7 @@ bind "KP_MINUS"       "condump; exec ./autoexec.cfg;                    ; fin_ke
 echoln "[7.2] Setting up binds for keyboard row 3";
 bind "TAB"            "+fin_scorenet;                                   ; fin_keycontainer";                    // This is the tab key
 bind "Q"              "                                                 ; fin_keycontainer";                    // This is the q key
-bind "W"              "slot10;                                          ; fin_keycontainer";                    // This is the w key
+bind "W"              "fin_nadexhon; slot10;                            ; fin_keycontainer";                    // This is the w key
 bind "E"              "+forward;                                        ; fin_keycontainer";                    // This is the e key
 bind "R"              "+fin_betteruse;                                  ; fin_keycontainer";                    // This is the r key
 bind "T"              "+reload; cl_decal_clear_world;                   ; fin_keycontainer";                    // This is the t key
@@ -141,7 +141,7 @@ bind "KP_PLUS"        "                                                 ; fin_ke
 
 echoln "[7.3] Setting up binds for keyboard row 4";
 bind "CAPSLOCK"       "                                                 ; fin_keycontainer";                    // This is the caps lock key
-bind "A"              "+fin_jthrow;                                     ; fin_keycontainer";                    // This is the a key
+bind "A"              "                                                 ; fin_keycontainer";                    // This is the a key
 bind "S"              "+left;                                           ; fin_keycontainer";                    // This is the s key
 bind "D"              "+back;                                           ; fin_keycontainer";                    // This is the d key
 bind "F"              "+right;                                          ; fin_keycontainer";                    // This is the f key
@@ -162,15 +162,15 @@ bind "KP_6"           "                                                 ; fin_ke
 echoln "[7.4] Setting up binds for keyboard row 5";
 bind "SHIFT"          "+sprint;                                         ; fin_keycontainer";                    // This is the left shift key
 bind "Z"              "noclip                                           ; fin_keycontainer";                    // This is the z key
-bind "X"              "slot7;                                           ; fin_keycontainer";                    // This is the x key
+bind "X"              "fin_nadexhon; slot7;                             ; fin_keycontainer";                    // This is the x key
 bind "C"              "fin_handswap;                                    ; fin_keycontainer";                    // This is the c key
-bind "V"              "slot8;                                           ; fin_keycontainer";                    // This is the v key
+bind "V"              "fin_nadexhon; slot8;                             ; fin_keycontainer";                    // This is the v key
 bind "B"              "+voicerecord";                                   // No keycontainer = works in the menu  // This is the b key
 bind "N"              "buymenu;                                         ; fin_keycontainer";                    // This is the n key
 bind "M"              "radio2;                                          ; fin_keycontainer";                    // This is the m key
 bind ","              "radio1;                                          ; fin_keycontainer";                    // This is the comma key
 bind "."              "radio3;                                          ; fin_keycontainer";                    // This is the period/full stop key
-bind "/"              "buyammo2;                                        ; fin_keycontainer";                    // This is the slash key
+bind "/"              "                                                 ; fin_keycontainer";                    // This is the slash key
 bind "RSHIFT"         "                                                 ; fin_keycontainer";                    // This is the right shift key
 bind "UPARROW"        "                                                 ; fin_keycontainer";                    // This is the up arrow key
 bind "KP_1"           "                                                 ; fin_keycontainer";                    // This is the Numpad 1 key
@@ -187,11 +187,11 @@ bind "SPACE"          "+fin_cjump;                                      ; fin_ke
 bind "RALT"           "                                                 ; fin_keycontainer";                    // This is the right alt key
 bind "RWIN"           "                                                 ; fin_keycontainer";                    // This is the windows (os) key to the right of the spacebar
 // ** No key for Menu key **                                            ** No key for Menu key **               // The menu key isn't bindable
-bind "RCTRL"          ";+duck;                                          ; fin_keycontainer";                    // This is the right control key
-bind "LEFTARROW"      "+left;                                           ; fin_keycontainer";                    // This is the left arrow key
+bind "RCTRL"          "                                                 ; fin_keycontainer";                    // This is the right control key
+bind "LEFTARROW"      "                                                 ; fin_keycontainer";                    // This is the left arrow key
 bind "DOWNARROW"      "                                                 ; fin_keycontainer";                    // This is the down arrow key
-bind "RIGHTARROW"     "+right;                                          ; fin_keycontainer";                    // This is the right arrow key
-bind "KP_0"         "fin_clearchat;                                   ; fin_keycontainer";                    // This is the Numpad 0 key
+bind "RIGHTARROW"     "                                                 ; fin_keycontainer";                    // This is the right arrow key
+bind "KP_0"           "fin_clearchat;                                   ; fin_keycontainer";                    // This is the Numpad 0 key
 bind "KP_DEL"         "fin_ahegao;                                      ; fin_keycontainer";                    // This is the Numpad period/full stop key
 // ** Numpad enter key is in section [7.4] **
 
@@ -199,7 +199,7 @@ bind "KP_DEL"         "fin_ahegao;                                      ; fin_ke
 echoln "[7.6] Setting up binds for the mouse";
 bind "MOUSE1"         "+attack;                                         ; fin_keycontainer";                    // This is the left click button
 bind "MOUSE2"         "+attack2; cl_decal_clear_world;                  ; fin_keycontainer";                    // This is the right click button
-bind "MOUSE3"         "player_ping; ping; cast_ray;                     ; fin_keycontainer";                    // This is the mouse wheel click button
+bind "MOUSE3"         "player_ping; cast_ray;                           ; fin_keycontainer";                    // This is the mouse wheel click button
 bind "MOUSE4"         "+voicerecord";                                   // No keycontainer = works in the menu  // This is one of the side mouse buttons
 bind "MOUSE5"         "fin_sniper;                                      ; fin_keycontainer";                    // This is one of the side mouse buttons
 bind "MWHEELUP"       "+jump";                                                                                  // This is scrolling the mouse wheel up
@@ -416,10 +416,10 @@ echoln " ";
 echoln " ";
 echoln " ";
 echoln "Loaded";
-echoln "Fin's CS2 Config 5.0.0-alpha3";
+echoln "Fin's CS2 Config 5.0.0-alpha4";
 echoln "https://steamcommunity.com/id/bigfinfrank";
 echoln "https://github.com/bigfinfrank/cfg";
-echoln "Last edited: June 1st 2023";
+echoln "Last edited: June 2nd 2023";
 echoln " ";
 echoln " ";
 echoln " ";
