--- a/fixed_controller.360.cfg
+++ b/fixed_controller.360.cfg
@@ -75,7 +75,7 @@ option_duck_method              "0";
 option_speed_method             "0";
 
 //CS2 cl_rumblescale                  "1.0";
--sprint // VALVE: don't start off in the slow (walking) state
+//CS2 -sprint // VALVE: don't start off in the slow (walking) state
 //CS2 +jlook  // VALVE: allow looking up and down
 
 // *** joy_pitchsensitivity_default "-0.85";      *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
