--- a/practice.cfg
+++ b/practice.cfg
@@ -71,7 +71,7 @@ sv_showimpacts_time "10";     // Show the impact times for the set number of sec
 sv_grenade_trajectory_prac_pipreview "true";  // Shows the trajectory of thrown grenades with a line that draws where the grenade went
 sv_grenade_trajectory_prac_trailtime "15";    // Sets the time trajectories
 //CS2 sv_grenade_trajectory_dash "1";         // Makes the tracjetory line dashed
-cl_grenadepreview "1";
+//CS2 cl_grenadepreview "1";
 mp_ct_default_grenades "weapon_flashbang weapon_hegrenade weapon_smokegrenade weapon_decoy weapon_incgrenade";
 mp_t_default_grenades "weapon_flashbang weapon_hegrenade weapon_smokegrenade weapon_decoy weapon_molotov";
 
@@ -80,4 +80,4 @@ sv_regeneration_force_on "1"; // Enable health regeneration
 
 // Restart the match to ensure all changes have been applied
 mp_restartgame "1";
-mp_forcerespawnplayers;
+//CS2 mp_forcerespawnplayers;
