--- a/begin.cfg
+++ b/begin.cfg
@@ -1,6 +1,6 @@
 say Disabling all-talk and unpausing the match!;
 say ​;
-sv_alltalk "0";
+sv_alltalk "false";
 mp_unpause_match;
 say ​;
 say Here are the notable server settings:;
