--- a/fixed_controller.360.cfg
+++ b/fixed_controller.360.cfg
@@ -21,7 +21,7 @@
 sk_autoaim_mode                 "2";
 
 joy_name                        "Xbox controller";
-joy_advanced                    "1";
+joy_advanced                    "true";
 joy_advaxisr                    "2";
 joy_advaxisu                    "4";
 joy_advaxisv                    "0";
@@ -63,16 +63,16 @@ joy_response_look               "0";
 
 
 //CS2 joy_inverty                     "0";
-joy_movement_stick              "0";
+joy_movement_stick              "false";
 
 //CS2 zoom_sensitivity_ratio_joystick "0.7";
 
 
-joystick 1
+joystick "true";
 
 //CS2 cl_autowepswitch                "1";
-option_duck_method              "0";
-option_speed_method             "0";
+option_duck_method              "false";
+option_speed_method             "false";
 
 //CS2 cl_rumblescale                  "1.0";
 //CS2 -sprint // VALVE: don't start off in the slow (walking) state
