--- a/practice.cfg
+++ b/practice.cfg
@@ -1,7 +1,7 @@
 // Setup
-sv_cheats "1";                  // Allows use of various "cheat" commands on the server
-bot_kick;                   // Kicks all bots from the server
-bot_stop "1";                   // Turns off all bot AI
+sv_cheats "true";               // Allows use of various "cheat" commands on the server
+bot_kick "all";                 // Kicks a specific bot, or all bots, matching the given criteria. <all> <t|ct> <type> <difficulty> <name>
+bot_stop "all";                 // Turns off all bot AI <1|all> | <not_bomber> | <t> | <ct>
 mp_warmup_end;                  // Ends warmup immediately
 
 // Set the server to Competitive
@@ -9,45 +9,42 @@ game_mode "1";                  // Sets game mode to Competitive
 game_type "0";                  // Sets game type to Classic
 
 // Turn off team limits and team auto balance
-mp_autoteambalance "0";         // 0: Players won't be autobalanced to the other team if their team has significantly more players 1: Players will be autobalanced if teams are "unfair"
-mp_limitteams "0";              // Number of extra players one team can have over another 0: Disables any limits
-mp_autokick "0";                // Don't automatically kick players (for griefing/AFKing)
+mp_autoteambalance "false";     // 0: Players won't be autobalanced to the other team if their team has significantly more players 1: Players will be autobalanced if teams are "unfair"
+mp_limitteams "0";              // Max # of players 1 team can have over another (0 disables check)
+mp_autokick "false";            // Kick idle/team-killing/team-damaging players
 
 // Adjust buy menu-related settings
-mp_items_prohibited "0";        // Turn off all item limitations
-mp_buytime "2147483647";        // Determines how long players can buy
-mp_buy_anywhere "1";            // 0: Players can buy in buy zones 1: Players can buy anywhere
+mp_items_prohibited "";         // Set this convar to a comma-delimited list of definition indices of weapons that should be prohibited from use.
+mp_buytime "2147483647";        // How many seconds after round start players can buy items for.
+mp_buy_anywhere "1";            // When set, players can buy anywhere, not only in buyzones. 0 = default. 1 = both teams. 2 = Terrorists. 3 = Counter-Terrorists.
 
 // Makes limits as high as they can go
-mp_maxrounds "2147483647";      // Sets the maximum rounds to 2^31-1, the maximum 32 bit signed integer
-mp_c4timer "2147483647";        // Determines how much time is between the bomb being planted and it exploding
-mp_timelimit "0";               // Disables the overall match time limit
-mp_roundtime "60";              // Sets the default round time to last 60 minutes
-mp_roundtime_defuse "60";       // Sets defuse gamemode rounds to last 60 minutes
-mp_roundtime_hostage "60";      // Sets hostage gamemode rounds to last 60 minutes
-mp_roundtime_deployment "60";   // Sets deployment time in co-op modes to last 60 minutes
+mp_maxrounds "2147483647";      //  max number of rounds to play before server changes maps
+mp_c4timer "2147483647";        // how long from when the C4 is armed until it blows
+mp_timelimit "0";               // game time per map in minutes
+mp_roundtime "60";              // How many minutes each round takes.
+mp_roundtime_defuse "60";       // How many minutes each round of Bomb Defuse takes. If 0 then use mp_roundtime instead.
+mp_roundtime_hostage "60";      // How many minutes each round of Hostage Rescue takes. If 0 then use mp_roundtime instead.
+mp_roundtime_deployment "60";   // How many minutes deployment for coop mission takes.
 
 // Make delays as short as possible
-mp_round_restart_delay "1";     // Determines how much time there is at the end of a round before the next one starts
-mp_halftime_duration "0";       // Determines how long the halftime screen with the scoreboard shows
-mp_freezetime "0";
-mp_halftime "0";                // Turns switching sides at the halfway point on or off
-
-mp_drop_knife_enable "1";               // Lets you drop knives to other players
-mp_anyone_can_pickup_c4 "1";            // Lets you pick up bomb while on CT side
+mp_round_restart_delay "1";     // Number of seconds to delay before restarting a round after a win
+mp_halftime_duration "0";       // Target number of seconds that halftime lasts; shortened if team intros are active
+mp_freezetime "0";              // how many seconds to keep players frozen when the round starts
+mp_halftime "false";            // Determines whether the match switches sides in a halftime event.
 
 // Make the match restart instead of swapping to a new map
-mp_match_restart_delay "3";     // Determines how long the delay should be before the match restarts
-mp_match_end_restart "1";       // 0: A new map is loaded once the match is complete 1: Restart the current map instead of loading a new map once the match is complete
+mp_match_restart_delay "3";     // Time (in seconds) until a match restarts.
+mp_match_end_restart "true";    // At the end of the match, perform a restart instead of loading a new map
 
 // Makes players respawn on death automatically (like in deathmatch)
-mp_respawn_on_death_ct "1";     // 0: Counter Terrorists don't respawn on death 1: Terrorists respawn on death
-mp_respawn_on_death_t "1";      // 0: Terrorists don't respawn on death 1: Terrorists respawn on death
+mp_respawn_on_death_ct "true";  // When set to 1, counter-terrorists will respawn after dying.
+mp_respawn_on_death_t "true";   // When set to 1, terrorists will respawn after dying.
 mp_respawnwavetime_ct "0";      // Time between respawn waves for CTs.
 mp_respawnwavetime_t  "0";      // Time between respawn waves for Terrorists.
 
 // Makes ammo unlimited
-sv_infinite_ammo "1";           // 0: Shooting/throwing grenades consumes ammo 1: Makes bullets and grenades unlimited (no reloads necessary)
+sv_infinite_ammo "1";           // Player's active weapon will never run out of ammo
 
 // Gives people as much money as possible
 mp_overtime_startmoney "65535"; // 2^16-1 (maximum signed 16 bit integer) is the realistic max, otherwise it overflows (65537 means $1)
@@ -60,12 +57,12 @@ ammo_grenade_limit_default "255";
 ammo_grenade_limit_total "32767";
 
 // Drop everything
-mp_drop_knife_enable "1";
-mp_anyone_can_pickup_c4 "1";
+mp_drop_knife_enable "true";    // Allows players to drop knives.
+mp_anyone_can_pickup_c4 "true"; // If set, everyone can pick up the c4, not just Ts.
 
 // Spray practice
-sv_showimpacts "1";           // 0: Don't show impact boxes 1: Show grenade and bullet impacts
-sv_showimpacts_time "10";     // Show the impact times for the set number of seconds
+sv_showimpacts "1";             // Shows client (red) and server (blue) bullet impact point (1=both, 2=client-only, 3=server-only)
+sv_showimpacts_time "10";       // Show the impact times for the set number of seconds
 
 // Grenade practice
 sv_grenade_trajectory_prac_pipreview "true";  // Shows the trajectory of thrown grenades with a line that draws where the grenade went
@@ -76,8 +73,8 @@ mp_ct_default_grenades "weapon_flashbang weapon_hegrenade weapon_smokegrenade we
 mp_t_default_grenades "weapon_flashbang weapon_hegrenade weapon_smokegrenade weapon_decoy weapon_molotov";
 
 // Enables health regeneration, this effectively turns on buddha mode without one-shot immunity
-sv_regeneration_force_on "1"; // Enable health regeneration
+sv_regeneration_force_on "true";              // Cheat to test regenerative health systems
 
 // Restart the match to ensure all changes have been applied
-mp_restartgame "1";
+mp_restartgame "1";             // If non-zero, game will restart in the specified number of seconds
 //CS2 mp_forcerespawnplayers;
